--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,6 +2,7 @@
     background: var(--dark-mode-elements);
     color: var(--dark-mode-text-light-mode-elements);
     transition: all 1s ease;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .header{
     display: flex;
