--- a/src/pages/info.css
+++ b/src/pages/info.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+    height: 100%;
 }
 .link-back{
     width: 6em;
@@ -66,6 +67,8 @@
 .border-countries{
     gap: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .info-theme-dark{
@@ -92,9 +95,27 @@
     color: var(--light-mode-text);
 }
 
-.info-theme-ligth-elements{
+.info-theme-ligth-elements {
+    color: var(--light-mode-text);
+}
+.info-theme-ligth-elements h3{
     color: var(--light-mode-text);
 }
 .info-theme-ligth-elements span{
     color: var(--light-mode-text);
+}
+
+.border-countries-country{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+}
+
+.border-countries-country p{
+    background:var(----dark-mode-elements) ;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 60px;
+    height: max-content;
+    text-align: center;
 }
