--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -5,6 +5,7 @@
     align-items: center;
 }
 
+
 .input-container select{
     background: inherit;
 }
@@ -127,4 +128,18 @@
 }
 .theme-dark{
     background: var(--background-dark);
+}
+
+.contents-model{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contents-model p {
+    color: #1766DC;
+    font-size: 16px;
+}
+.contents-model img {
+    
+    width: 150px;
 }
